<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/location_a"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/a_easting"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="75dp"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:text="@string/easting"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/a_easting"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/a_northing"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="75dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/northing"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/a_northing"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a_easting" />

        <Button
            android:id="@+id/button"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_marginTop="6dp"
            android:text="@string/button_text"
            android:textSize="18sp"
            app:backgroundTint="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_direction" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:text="@string/clear"
            android:textSize="18sp"
            app:backgroundTint="#C6C6C6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <EditText
            android:id="@+id/b_easting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/easting"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/b_easting"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/b_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
            app:layout_constraintEnd_toStartOf="@+id/textView15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView14" />

        <EditText
            android:id="@+id/b_northing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView12" />

        <TextView
            android:id="@+id/output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/output"
            android:textColor="#4CAF50"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clearButton"
            app:layout_constraintVertical_bias="0.034" />

        <EditText
            android:id="@+id/a_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
            app:layout_constraintEnd_toStartOf="@+id/textView16"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/degrees"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/a_direction"
            app:layout_constraintTop_toBottomOf="@+id/a_northing" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/direction"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/a_direction"
            app:layout_constraintEnd_toStartOf="@+id/a_direction"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/direction"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/b_direction"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_northing" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/northing"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/b_northing"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_easting" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degrees"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/b_direction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/b_direction" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="6dp"
            android:paddingLeft="10dp"
            android:text="@string/location_b"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a_direction" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>